# pico_2w_clock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: pico_8seg.h  wiznet_ethernet.h  wiznet_sntp.h
src/: main.c  pico_8seg.c  wiznet_ethernet.c  wiznet_sntp.c
